--- a/style.css
+++ b/style.css
@@ -1,191 +1,434 @@
-@font-face {
-   font-family: 'Runescape UF';
-   src: url(./runescape_uf.woff) format('woff');
-}
-*{
-  box-sizing: border-box;
-  font-family: 'Runescape UF';
-}
-body{
-   font-size: 1.5rem;
-   --bg: #1a1a1a;
-   --primary: white;
+* {
    margin: 0;
-   background: var(--bg);
-   color: var(--primary);
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   min-height: 100vh;
-   padding: 50px 30px;
-   text-transform: uppercase;
-   flex-direction: column;
+   box-sizing: border-box;
+   padding: 0;
+   font-family: 'Cinzel';
+   --dark: #060D13;
+   --light: #0D1C29;
+   --gold: #E1BB34;
 }
-main{
-   padding-top: 16px;
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   width: 1440px;
-   max-width: 100%;
-   position: relative;
+
+.tippy-box[data-animation="shift-toward"][data-placement^="top"][data-state="hidden"] {
+   transform: translateY(-10px)
 }
-footer{
-  margin-top: 40px;
+
+.tippy-box[data-animation="shift-toward"][data-placement^="bottom"][data-state="hidden"] {
+   transform: translateY(10px)
 }
-footer a{
-  text-decoration: none;
-  color: cornflowerblue;
+
+.tippy-box[data-animation="shift-toward"][data-placement^="left"][data-state="hidden"] {
+   transform: translateX(-10px)
 }
-footer a:hover{
-  filter: brightness(1.1);
+
+.tippy-box[data-animation="shift-toward"][data-placement^="right"][data-state="hidden"] {
+   transform: translateX(10px)
 }
-.selection button{
-  font-size: 1.5rem;
-  background: #ddd;
-  margin-bottom: 15px;
-  border: 0;
-  padding: 10px 20px;
-  cursor: pointer;
+
+.tippy-box[data-animation="shift-toward"][data-state="hidden"] {
+   opacity: 0
 }
-.selection button:hover{
-  filter: brightness(1.1);
+
+.tippy-box[data-theme="runesets"] {
+   background-color: var(--light);
+   /* color: var(--gold); */
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
-#search-frags, #search-sets{
-  width: 100%;
-  padding: 10px;
-  font-size: 1.5rem;
-  margin-bottom: 20px;
+
+.activate-set {
+   width: 100%;
+   margin-top: 10px;
+   color: var(--gold);
+   background: var(--dark);
+   border: 0;
+   padding: 10px;
+   margin-bottom: 3px;
+   cursor: pointer;
 }
-.fragments-container{
-  position: relative;
-   display: flex;
-   flex-direction: column;
-   gap: 10px;
-   padding-right: 10px;
+
+.activate-set:hover {
+   filter: brightness(1.2);
 }
-.sets-container{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  height: fit-content;
-  position: fixed;
-  width: calc(1440px / 2 - 20px);
-  right: calc((100vw - 1440px) / 2);
-  padding-left: 10px;
+
+body {
+   background: var(--dark);
 }
-.set-item{
+
+header {
+   background: url(./header.png) no-repeat left top, url(./header.png) no-repeat right center, url(./header.png) repeat-x center bottom;
+   box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.64);
+}
+
+header .inner {
+   max-width: 1200px;
+   height: 60px;
+   margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
-   width: fit-content;
-   background: brown;
-   padding: 10px;
-   height: fit-content;
+   position: relative;
 }
-.set-item.active{
-  background: green;
-}
-.set-item.orange{
-  background: orange;
-}
- 
- .switch {
-    position: relative;
-   width: 70%;
-   height: 36px;
-   padding: 1px;
-   border-radius: 3px;
-   cursor: pointer;
-   display: flex;
-   align-items: center;
-   padding-right: 20px;
- }
- 
- .switch-input {
-    display: none;
- }
- .switch-label {
+
+header .inner img {
+   height: 100%;
+   object-fit: contain;
    position: absolute;
-   right: 0;
-   width: 70px;
-   height: inherit;
-   font-size: 10px;
-   text-transform: uppercase;
-   background: brown;
-   border-radius: inherit;
-   -webkit-transition: 0.15s ease-out;
-   -moz-transition: 0.15s ease-out;
-   -o-transition: 0.15s ease-out;
-   transition: 0.15s ease-out;
-   -webkit-transition-property: opacity background;
-   -moz-transition-property: opacity background;
-   -o-transition-property: opacity background;
-   transition-property: opacity background;
- }
- .switch-label:before, .switch-label:after {
-   position: absolute;
-   top: 50%;
-   margin-top: -.5em;
-   line-height: 1;
-   -webkit-transition: inherit;
-   -moz-transition: inherit;
-   -o-transition: inherit;
-   transition: inherit;
- }
- .switch-label:before {
-   content: attr(data-off);
-   right: 9px;
-   color: white;
-   text-shadow: 0 1px rgba(255, 255, 255, 0.5);
- }
- .switch-label:after {
-   content: attr(data-on);
-   left: 11px;
-   color: white;
-   text-shadow: 0 1px rgba(0, 0, 0, 0.2);
-   opacity: 0;
- }
- .switch-input:checked ~ .switch-label {
-   background: green;
- }
- .switch-input:checked ~ .switch-label:before {
-   opacity: 0;
- }
- .switch-input:checked ~ .switch-label:after {
-   opacity: 1;
- }
- 
- .switch-handle {
-   position: absolute;
-   right: 48px;
-   width: 36px;
-   height: 36px;
-   background: white;
-   border-radius: 3px;
-   background-image: linear-gradient(to bottom, white 40%, #f0f0f0);
-   -webkit-transition: transform 0.15s ease-out;
-   -moz-transition: transform 0.15s ease-out;
-   -o-transition: transform 0.15s ease-out;
-   transition: transform 0.15s ease-out;
- }
- .switch-handle:before {
-   content: '';
-   position: absolute;
-   top: 50%;
    left: 50%;
-   margin: -6px 0 0 -6px;
-   width: 12px;
-   height: 12px;
-   background: #f9f9f9;
-   border-radius: 6px;
- }
- .switch-input:checked ~ .switch-handle {
-   transform: translateX(70px);
- }
- 
- @media screen and (max-width: 1440px) {
-   .sets-container{
-     width: calc(50% - 20px);
-     right: 20px;
-   }
- }
+   top: 50%;
+   transform: translate(-50%, 10px) scale(2);
+}
+
+main {
+   max-width: 1200px;
+   margin: auto;
+   padding-top: 100px;
+}
+
+.popup-infos {
+   position: fixed;
+   inset: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   z-index: 9999;
+   opacity: 0;
+   pointer-events: none;
+}
+
+.popup-infos.active {
+   pointer-events: all;
+   opacity: 1;
+}
+
+.popup-infos::before {
+   backdrop-filter: blur(10px);
+   position: absolute;
+   inset: 0;
+   content: '';
+   z-index: -1;
+   opacity: 0;
+   transition: all 0.3s;
+}
+
+.popup-infos.active::before {
+   opacity: 1;
+}
+
+.popup-infos .inner {
+   color: white;
+   width: 50%;
+   background: var(--light);
+   border-radius: 15px;
+   padding: 40px 20px;
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+   position: relative;
+   opacity: 0;
+   transform: scale(0.5);
+   transition: transform 0.3s cubic-bezier(.03, 1.13, .59, 1.1) 0.2s, opacity 0.2s linear 0.1s;
+}
+
+.popup-infos.active .inner {
+   opacity: 1;
+   transform: none;
+}
+
+.popup-infos .inner .set-info .set-title {
+   color: var(--gold);
+   font-size: 3rem;
+   margin-bottom: 20px;
+   text-align: center;
+}
+
+.popup-infos .inner .set-info .set-description {
+   text-align: center;
+   margin-bottom: 30px;
+}
+
+.popup-infos .inner .set-info .img-levels {
+   display: grid;
+   grid-template-columns: 1fr 2fr;
+   margin: auto;
+   width: fit-content;
+   align-items: center;
+}
+
+.popup-infos .inner .set-info .levels>div {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   border: 1px solid white;
+   border-bottom: 0;
+   text-align: center;
+}
+
+.popup-infos .inner .set-info .levels>div:first-child {
+   border-bottom: 0;
+}
+
+.popup-infos .inner .set-info .levels>div * {
+   font-size: 1rem;
+   width: 100%;
+   height: 100%;
+   padding: 10px;
+}
+
+.popup-infos .inner .set-info .levels>div *:nth-child(odd) {
+   border-right: 1px solid white;
+}
+
+.popup-infos .inner .set-info .levels>div * {
+   border-bottom: 1px solid white;
+}
+
+.popup-infos .inner .set-info .levels>div *:hover {
+   background: var(--dark);
+}
+
+.popup-infos .inner .set-info img {
+   width: 150px;
+}
+
+.popup-infos .inner .close {
+   cursor: pointer;
+   margin: auto;
+   display: block;
+   background: brown;
+   padding: 10px 40px;
+   color: white;
+   border: 0;
+   font-size: 1.125rem;
+   box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+   margin-top: 40px;
+}
+
+.popup-infos .inner .close:hover {
+   filter: brightness(1.2);
+}
+
+.popup-infos .inner .close img {
+   width: 100%;
+   height: 100%;
+   object-fit: contain;
+   filter: saturate(0) invert(1);
+   transform: rotate(45deg);
+}
+
+.set-state {
+   width: 100%;
+   height: 115px;
+   border-radius: 15px;
+   background: var(--light);
+   padding: 0 20px;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   margin-bottom: 50px;
+}
+
+.set-state .placeholder {
+   width: 50px;
+   height: 50px;
+   background: white;
+   opacity: 0.3;
+   border-radius: 10px;
+}
+
+.set-state img {
+   width: 50px;
+   height: 50px;
+   filter: drop-shadow(0 5px 10px rgba(0, 0, 0, 0.3));
+   transform: scale(1.5);
+}
+
+.frags-sets {
+   display: grid;
+   grid-template-columns: 1fr 2fr;
+}
+
+.frags {
+   padding: 20px 10% 20px 0;
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   row-gap: 10px;
+   align-items: flex-start;
+   height: fit-content;
+   overflow-y: auto;
+   max-height: 500px;
+}
+
+.frags .search-unselect {
+   grid-column: 1/3;
+   display: flex;
+   gap: 10px;
+   margin-bottom: 20px;
+}
+
+.frags .search-unselect input {
+   outline: none;
+   flex: 1;
+   padding: 10px;
+   font-size: 1rem;
+   background: var(--dark);
+   color: white;
+   border: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+.frags .search-unselect button {
+   background: var(--dark);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border: 1px solid rgba(255, 255, 255, 0.6);
+   cursor: pointer;
+   min-height: 100%;
+   padding: 10px;
+}
+
+.frags .fragment-name {
+   color: var(--gold);
+   font-size: 1.125rem;
+}
+
+.frags .actions {
+   margin-left: auto;
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+   gap: 10px;
+}
+
+.frags .actions button {
+   width: 33px;
+   height: 33px;
+   background: var(--light);
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-radius: 7px;
+   border: 0;
+   cursor: pointer;
+}
+
+.frags .actions .toggle.active .add-img {
+   display: none;
+}
+
+.frags .actions .toggle .delete-img {
+   display: none;
+}
+
+.frags .actions .toggle.active .delete-img {
+   display: block;
+}
+
+.frags .actions button:hover {
+   filter: brightness(1.2);
+}
+
+.sets {
+   padding: 20px 0 20px 10%;
+   padding-right: 0;
+}
+
+.sets .actions-bar {
+   width: 100%;
+   border-radius: 15px;
+   background: var(--light);
+   padding: 20px;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   display: flex;
+   gap: 30px;
+}
+
+.sets .actions-bar select {
+   flex: 1;
+   background: none;
+   color: var(--gold);
+   border: 0;
+   cursor: pointer;
+   outline: none;
+   font-size: 1.125rem;
+}
+
+.sets .actions-bar select option {
+   background: var(--light);
+   border: 0;
+}
+
+.sets .actions-bar .buttons {
+   display: flex;
+   gap: 10px;
+}
+
+.sets .actions-bar .buttons button {
+   width: 33px;
+   height: 33px;
+   background: var(--light);
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-radius: 7px;
+   border: 0;
+   cursor: pointer;
+}
+
+.sets .show-active {
+   display: flex;
+   gap: 15px;
+   color: white;
+   align-items: center;
+   margin: 15px 0 30px;
+   opacity: 0.7;
+}
+
+.sets .show-active * {
+   cursor: pointer;
+}
+
+.sets .sets-list {
+   display: flex;
+   gap: 20px;
+   flex-wrap: wrap;
+}
+
+.sets .sets-list .set {
+   position: relative;
+   cursor: pointer;
+}
+
+.sets .sets-list .set img {
+   width: 100px;
+}
+
+.sets .sets-list .set::after {
+   position: absolute;
+   inset: 0;
+   background-image: url(./electricity.gif);
+   background-size: contain;
+   background-repeat: no-repeat;
+}
+
+.sets .sets-list .set.active::after {
+   content: '';
+}
+
+.sets .sets-list .set .active-level {
+   position: absolute;
+   bottom: 0;
+   right: 10%;
+   width: 30px;
+   height: 30px;
+   display: none;
+   justify-content: center;
+   align-items: center;
+   background: black;
+   color: white;
+   border-radius: 50%;
+   font-size: 0.875rem;
+}
+
+.sets .sets-list .set .active-level.active {
+   display: flex;
+}
