--- a/style.css
+++ b/style.css
@@ -66,15 +66,18 @@ header .inner {
    justify-content: center;
    align-items: center;
    position: relative;
+   gap: 30px;
+}
+
+header .inner a {
+   color: var(--gold);
+   text-decoration: none;
+   font-weight: bold;
 }
 
 header .inner img {
    height: 100%;
    object-fit: contain;
-   position: absolute;
-   left: 50%;
-   top: 50%;
-   transform: translate(-50%, 10px) scale(2);
 }
 
 main {
@@ -210,7 +213,6 @@ main {
    filter: saturate(0) invert(1);
    transform: rotate(45deg);
 }
-
 .set-state {
    width: 100%;
    height: 115px;
@@ -251,7 +253,7 @@ main {
    align-items: flex-start;
    height: fit-content;
    overflow-y: auto;
-   max-height: 500px;
+   max-height: 400px;
 }
 
 .frags-container .search-unselect {
@@ -334,7 +336,7 @@ main {
 }
 
 .sets {
-   padding: 20px 0 20px 10%;
+   padding: 0 0 20px 10%;
    padding-right: 0;
 }
 
@@ -383,7 +385,8 @@ main {
    cursor: pointer;
 }
 
-.sets .show-active {
+.sets .show-active,
+.toggle-limit {
    display: flex;
    gap: 15px;
    color: white;
@@ -392,7 +395,8 @@ main {
    opacity: 0.7;
 }
 
-.sets .show-active * {
+.sets .show-active *,
+.toggle-limit * {
    cursor: pointer;
 }
 
@@ -405,6 +409,14 @@ main {
 .sets .sets-list .set {
    position: relative;
    cursor: pointer;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   color: var(--gold);
+   gap: 10px;
+   font-size: 11px;
+   ;
 }
 
 .sets .sets-list .set img {
@@ -423,9 +435,17 @@ main {
    content: '';
 }
 
+.sets .sets-list .set.active img {
+   filter: drop-shadow(0 0 10px green);
+}
+
+.sets .sets-list .set.orange img {
+   filter: drop-shadow(0 0 10px orange);
+}
+
 .sets .sets-list .set .active-level {
    position: absolute;
-   bottom: 0;
+   bottom: 20px;
    right: 10%;
    width: 30px;
    height: 30px;
